# common-superbuild

./: .gitattributes  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  versions.cmake
.gitlab/: artifacts.yml  os-linux.yml  os-macos.yml  os-windows.yml
.gitlab/ci/: cdash-groups.json  cmake.ps1  configure_common.cmake  configure_linux_python36.cmake  configure_linux_python37.cmake  configure_macos_arm64_oldospraypython.cmake  configure_sccache.cmake  ctest_build.cmake  ctest_configure.cmake  ctest_test.cmake
CMake/: PVExternalProject.cmake  ParaViewModules.cmake
cmake/: CTestCustom.cmake.in  SuperbuildCrossMacros.cmake  SuperbuildExternalProject.cmake  SuperbuildGenerateSPDX.cmake  SuperbuildInstallMacros-apple.cmake  SuperbuildInstallMacros-unix.cmake  SuperbuildInstallMacros-win32.cmake  SuperbuildInstallMacros.cmake  SuperbuildMacros.cmake  SuperbuildPackageMacros.cmake  SuperbuildRevisionMacros.cmake  SuperbuildTestingMacros.cmake  SuperbuildUserVariables.md  SuperbuildUtils-apple.cmake  SuperbuildUtils-unix.cmake  SuperbuildUtils.cmake  SuperbuildVariables.md  SuperbuildVersionMacros.cmake  superbuild_handle_environment.cmake.in  superbuild_package_cmakelists.cmake.in  superbuild_remove_python_dirs.cmake  superbuild_testing_extract_binary.cmake  superbuild_testing_trampoline.cmake.in  template.spdx.in
cmake/patches/: ExternalProject.cmake
cmake/scripts/: extract_test.cmake  fixup_bundle.apple.py  fixup_bundle.py  fixup_bundle.unix.py  fixup_bundle.windows.py  fixup_python.apple.cmake  fixup_python.unix.cmake  fixup_python.windows.cmake  install_dependencies.unix.cmake  install_dependencies.windows.cmake  package_test.cmake
prebuilt-python/: CMakeLists.txt  README.md  versions.cmake
prebuilt-python/projects/win32/: bzip2.cmake  matplotlib.bundle.cmake  matplotlib.cmake  numpy.bundle.cmake  numpy.cmake  python.bundle.cmake  python.bundle.common.cmake  python.cmake  python.package.bundle.cmake  python2.bundle.cmake  python2.bundle.common.cmake  python2.cmake  python2.package.bundle.cmake  pywin32.bundle.cmake  pywin32.cmake  zlib.cmake
prebuilt-python/projects/win32/scripts/: numpy.install.cmake  python.install.cmake
projects/: alembic.cmake  blosc.cmake  boost.common.cmake  boost.system.cmake  bzip2.cmake  cgns.cmake  cxx11.cmake  cxx17.cmake  cython.cmake  embree.cmake  exodus.cmake  fortran.cmake  freetype.cmake  hdf5.cmake  hdf5.system.cmake  imath.cmake  ispc.cmake  jsoncpp.cmake  lapack.cmake  lapack.system.cmake  libjpegturbo.cmake  llvm.cmake  lz4.cmake  matplotlib.cmake  matplotlib.system.cmake  mesa.cmake  mesa.common.cmake  meson.cmake  mpi.system.cmake  netcdf.cmake  ninja.cmake  nlohmannjson.cmake  numpy.cmake  numpy.system.cmake  openimagedenoise.cmake  openmp.cmake  openmp.system.cmake  openvkl.cmake  openxrsdk.cmake  osmesa.cmake  (+97 more)
projects/apple/: boost.cmake  bzip2.cmake  cxx11.cmake  matplotlib.cmake  png.cmake  python.cmake  python2.cmake  qt4.cmake  qt5.cmake  tbb.cmake  zlib.cmake
projects/apple-unix/: boost.cmake  expat.cmake  ffi.cmake  ffmpeg.cmake  flexbison.cmake  flexbison.system.cmake  fontconfig.cmake  freetype.cmake  gperf.cmake  h5py.cmake  libxml2.cmake  mpi.cmake  openssl.cmake  pkgconf.cmake  python3.cmake  pythonmpi4py.cmake  scipy.cmake  sqlite.cmake  szip.cmake  utillinux.cmake  xz.cmake
projects/apple-unix/patches/: .gitattributes  boost-osx-rpath.patch  ffi-pcfiledir.patch  ffmpeg-swscalex86-yuv2yuvX-revert-conversion-to-assembly.patch  (+6 more)
projects/patches/: bzip2-add-cmake.patch  cgns-hdf5-versioning.patch  freetype-msvc-include-behavior.patch  hdf5-cmake-fixes.patch  hdf5-fix-ext-pkg-find.patch  hdf5-no-zlib-config.patch  hdf5-szip-library-variables.patch  libjpegturbo-msvc-default-lib-flags.patch  llvm-15.0.6-no-force-install-name-dir.patch  llvm-16.0.6-no-force-install-name-dir.patch  llvm-7.0.0-no-force-install-name-dir.patch  matplotlib-deps-on-windows.patch  matplotlib-no-certifi.patch  matplotlib-setup.cfg.patch  netcdf-find-hdf5-hl.patch  netcdf-find-hdf5.patch  netcdf-fix-include.patch  netcdf-fix-szip-library-linking.patch  netcdf-hdf5-finding.patch  netcdf-parallel-hdf5.patch  netcdf-read-flag-fix.patch  netcdf-remove-zip-dep.patch  netcdf-vtk-tag.patch  numpy-1.19.5-cython3.patch  numpy-1.21.6-cython3.patch  numpy-1.24.4-cython3.patch  openvkl-install-rpath.patch  pybind11-msvc2022.patch  pythonautobahn-python3.8.patch  pythonnetcdf4-msmpi-fix.patch  pythonnetcdf4-no-certifi.patch  pythonnetcdf4-szip-libname.patch  pythonpkgconfig-no-nose.patch  pythontwisted-macos-ssl.patch  qt5-fix-xcb-header.patch  snappy-no-werror.patch  zlib-pcfile-rel-prefix.patch  zlib-remove-zconf.h.patch  zlib-version-script.patch
projects/scripts/: cxx17.cxx  ispc.install.cmake  matplotlib.build.cmake  matplotlib.patch.cmake  pythonzope.install.cmake  tbb.install.cmake
projects/unix/: egl.system.cmake  expat.cmake  fontconfig.cmake  glproto.cmake  llvm.cmake  mesa.cmake  mesa.common.cmake  python.cmake  python2.cmake  python3.cmake  qt4.cmake  qt5.cmake  tbb.cmake  utillinux.cmake
projects/win32/: boost.cmake  bzip2.cmake  flexbison.cmake  freetype.cmake  ftjam.cmake  hdf5.cmake  matplotlib.cmake  mpi.cmake  netcdf.cmake  numpy.cmake  openssl.cmake  pkgconf.cmake  python.cmake  python2.cmake  python3.cmake  pythonmpi4py.cmake  pywin32.cmake  qt.package.cmake  qt4.cmake  qt4.system.cmake  qt5.cmake  qt5.package.cmake  qt5.system.cmake  scipy.cmake  sqlite.cmake  szip.cmake  tbb.cmake  xz.cmake  zlib.cmake
selftest/: CMakeLists.txt
selftest/tests/: CMakeLists.txt  accelerate-check.cmake  apple-check.cmake  check-license.cmake  matplotlib-render.py  unix-check-lib64.cmake
selftest/tests/hdf5-check/: CMakeLists.txt  hdf5.c
selftest/tests/mpi-check/: CMakeLists.txt
selftest/tests/openssl-check/: CMakeLists.txt  openssl.c
selftest/tests/sqlite-check/: CMakeLists.txt  sqlite.c
selftest/tests/tbb-check/: CMakeLists.txt
standalone-mesa/: CMakeLists.txt
standalone-mesa/projects/unix/: mesa.bundle.cmake
standalone-mesa/projects/win32/: osmesa.bundle.cmake
standalone-qt/: CMakeLists.txt
(+45 files in other folders)
